# PersonnelApi/_projectStarter/swagger.json
@@ -214,7 +214,11 @@
     },
     "/department/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Departments"
+        ],
+        "summary": "List Departmentss",
+        "description": "  You can send query with endpoint for filter[], search[], sort[], page and limit.  <ul> Examples:  <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>  <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>  <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>  <li>URL/?<b>page=2&limit=1</b></li>  </ul>  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -222,7 +226,21 @@
         }
       },
       "post": {
+        "tags": [
+          "Departments"
+        ],
+        "summary": "Create Departments",
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Department"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -232,6 +250,10 @@
     },
     "/department/{id}": {
       "get": {
+        "tags": [
+          "Departments"
+        ],
+        "summary": "Read Single Departments",
         "description": "",
         "parameters": [
           {
@@ -248,6 +270,10 @@
         }
       },
       "put": {
+        "tags": [
+          "Departments"
+        ],
+        "summary": "Update Departments",
         "description": "",
         "parameters": [
           {
@@ -255,6 +281,14 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Departments"
+            }
           }
         ],
         "responses": {
@@ -264,6 +298,10 @@
         }
       },
       "delete": {
+        "tags": [
+          "Departments"
+        ],
+        "summary": "Delete Departments",
         "description": "",
         "parameters": [
           {
@@ -283,6 +321,10 @@
         }
       },
       "patch": {
+        "tags": [
+          "Departments"
+        ],
+        "summary": "Update Departments",
         "description": "",
         "parameters": [
           {
@@ -290,6 +332,14 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Departments"
+            }
           }
         ],
         "responses": {
@@ -301,7 +351,11 @@
     },
     "/department/{id}/personnel": {
       "get": {
-        "description": "",
+        "tags": [
+          "Departments"
+        ],
+        "summary": "Personnels Departments",
+        "description": "  You can send query with endpoint for filter[], search[], sort[], page and limit.  <ul> Examples:  <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>  <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>  <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>  <li>URL/?<b>page=2&limit=1</b></li>  </ul>  ",
         "parameters": [
           {
             "name": "id",
@@ -553,7 +607,7 @@
             },
             "default": {
               "type": "number",
-              "example": 1734359375303
+              "example": 1734363821102
             }
           }
         }
